--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/returnToMapButton"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/addNewRegisterButton"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
@@ -62,21 +59,22 @@
             android:textColor="@android:color/black" />
 
         <TextView
-            android:text="Filtrar"
+            android:text="Filtrar:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/filterRegistersSpinner"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             android:id="@+id/textView4"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
+            android:textStyle="normal|bold" />
 
         <Spinner
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:id="@+id/filterRegistersSpinner"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/textView4"
