--- a/app/src/main/res/layout/activity_info_prop.xml
+++ b/app/src/main/res/layout/activity_info_prop.xml
@@ -404,7 +404,7 @@
             app:layout_constraintHorizontal_bias="1.0" />
 
         <TextView
-            android:text="Uso predominante\nnaRegiao:"
+            android:text="Uso predominante\nna Regiao:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView92"
@@ -753,6 +753,231 @@
             android:layout_marginTop="4dp"
             android:enabled="false"
             />
+
+        <ImageView
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bar"
+            android:id="@+id/imageView32"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/benfFotosButton"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" />
+
+        <TextView
+            android:text="Plantações"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView99"
+            android:textSize="24sp"
+            android:textColor="@android:color/black"
+            android:textStyle="normal|bold"
+            android:textAlignment="center"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView32" />
+
+        <ImageView
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bar"
+            android:id="@+id/imageView33"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView99"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" />
+
+        <TextView
+            android:text="Escolha a Plantação:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView100"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView33"
+            android:layout_marginTop="18dp"
+            android:textSize="18sp"
+            />
+
+        <Spinner
+            android:id="@+id/spinnerPlantacao"
+            android:layout_marginStart="24dp"
+            app:layout_constraintLeft_toRightOf="@+id/textView100"
+            android:layout_marginLeft="24dp"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            app:layout_constraintTop_toTopOf="@+id/textView100"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            />
+
+        <TextView
+            android:text="Tipo (pes, m² ou ha):"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView101"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView100"
+            android:layout_marginTop="22dp"
+            android:textSize="18sp" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:inputType="textPersonName"
+            android:id="@+id/tipoPlantacaoText"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/textView101"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="@+id/textView101"
+            android:hint="Tipo"
+            android:textSize="16sp"
+            android:minLines="1"
+            android:layout_height="38dp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:text="Idade:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView102"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView101"
+            android:layout_marginTop="22dp"
+            android:textSize="18sp" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:inputType="textPersonName"
+            android:id="@+id/idadePlantacaoText"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/textView102"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="@+id/textView102"
+            android:hint="Idade"
+            android:textSize="16sp"
+            android:minLines="1"
+            android:layout_height="38dp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:text="Complemento:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView103"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView102"
+            android:layout_marginTop="22dp"
+            android:textSize="18sp" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:inputType="textPersonName"
+            android:id="@+id/complPlantacaoText"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/textView103"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="@+id/textView103"
+            android:hint="Complemento"
+            android:textSize="16sp"
+            android:minLines="1"
+            android:layout_height="38dp"
+            android:textAlignment="center" />
+
+        <Button
+            android:text="Salvar Plantação"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/savePlantacaoButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView103"
+            android:layout_marginTop="8dp"
+            />
+
+        <TextView
+            android:text="Observações:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView104"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/savePlantacaoButton"
+            android:layout_marginTop="22dp"
+            android:textSize="18sp" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:inputType="textMultiLine"
+            android:id="@+id/obsInfoPropText"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView104"
+            android:textSize="16sp"
+            android:lines="5"
+            android:minLines="1"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:gravity="start"/>
+
+        <ImageView
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bar"
+            android:id="@+id/imageView41"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView104"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" />
+
+        <Button
+            android:text="Salvar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/saveInfoPropButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView41"/>
+
+
+
 
 
     </android.support.constraint.ConstraintLayout>
