--- a/app/src/main/res/layout/activity_register_juridico.xml
+++ b/app/src/main/res/layout/activity_register_juridico.xml
@@ -607,7 +607,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@id/textView60"
+            app:layout_constraintTop_toBottomOf="@+id/textView60"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
