--- a/app/src/main/res/layout/activity_info_prop.xml
+++ b/app/src/main/res/layout/activity_info_prop.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_info_prop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -652,7 +652,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:showText="true"
-        android:text="Possui Construções: " />
+        android:text="Possui construções: " />
 
         <EditText
             android:layout_width="0dp"
@@ -799,7 +799,7 @@
             android:layout_marginLeft="16dp" />
 
         <TextView
-            android:text="Escolha a Plantação:"
+            android:text="Escolha a plantação:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView100"
@@ -957,7 +957,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView41"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView104"
+            app:layout_constraintTop_toBottomOf="@+id/obsInfoPropText"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -974,9 +974,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView41"/>
-
-
-
 
 
     </android.support.constraint.ConstraintLayout>
