--- a/app/src/main/res/layout/activity_info_prop.xml
+++ b/app/src/main/res/layout/activity_info_prop.xml
@@ -37,7 +37,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:text="Roteiro de Acesso"
+            android:text="Característica da Propriedade"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="24sp"
