--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             android:textColor="@android:color/black" />
 
         <TextView
-            android:text="Filtrar:"
+            android:text="Filtro:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -85,6 +85,8 @@
             android:layout_height="38dp"
             android:entries="@array/filtros"/>
 
+
+
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
@@ -106,7 +108,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/registerList" />
+            android:id="@+id/listaCadastros" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
