--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,27 +15,68 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:text="Retornar mapa"
+        <ImageView
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bar"
+            android:id="@+id/imageView100"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:text="Adicionar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/returnToMapButton"
+            android:id="@+id/textView200"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/imageView100"
+            android:textSize="24sp"
+            android:textAlignment="center"
+            android:textStyle="normal|bold"
+            android:textColor="@android:color/black" />
+
+        <ImageView
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bar"
+            android:id="@+id/imageView101"
+            app:layout_constraintTop_toBottomOf="@+id/textView200"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp" />
 
         <Button
-            android:text="Adicionar Cadastro"
+            android:text="Pessoa Jurídica"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/addNewEmpButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView101"/>
+
+        <Button
+            android:text="Pessoa Física"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addNewRegisterButton"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView101"/>
 
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/returnToMapButton"
+            app:layout_constraintTop_toBottomOf="@+id/addNewEmpButton"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -58,13 +99,27 @@
             android:textStyle="normal|bold"
             android:textColor="@android:color/black" />
 
+        <ImageView
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bar"
+            android:id="@+id/imageView102"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp" />
+
         <TextView
             android:text="Filtro:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/filterRegistersSpinner"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/imageView102"
             android:id="@+id/textView4"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
@@ -79,7 +134,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/textView4"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/imageView102"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_height="38dp"
@@ -109,6 +164,14 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/listaCadastros" />
+
+        <Button
+            android:text="Retornar mapa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/returnToMapButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/listaCadastros"/>
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
