Need to finish volley post and give some final touches

--- a/app/src/main/res/layout/activity_fotos.xml
+++ b/app/src/main/res/layout/activity_fotos.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context="horusgeo.br158.FotosActivity">
 
+
+    <ListView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonVoltar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/listaFotos"
+        android:entries="@array/fotos"
+        />
+
+    <Button
+        android:id="@+id/buttonVoltar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salvar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
