--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,28 +157,28 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintBottom_toTopOf="@+id/returnToMapButton"
+            app:layout_constraintBottom_toTopOf="@+id/sendButton"
             android:layout_marginTop="8dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/listaCadastros" />
 
-        <Button
-            android:text="Retornar mapa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/returnToMapButton"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/sendButton"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        <!--<Button-->
+            <!--android:text="Retornar mapa"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/returnToMapButton"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toLeftOf="@+id/sendButton"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
 
     <Button
         android:text="Enviar Relatórios"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sendButton"
-        app:layout_constraintLeft_toRightOf="@+id/returnToMapButton"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
