--- a/app/src/main/res/layout/activity_add_new_register.xml
+++ b/app/src/main/res/layout/activity_add_new_register.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Nome do Proprietário"
+            android:text="(Nome do Proprietário)"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -60,7 +60,7 @@
             android:id="@+id/buttonRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Informações Proprietário"
+            android:text="Informações do Proprietário"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView61"
@@ -71,19 +71,20 @@
             android:id="@+id/buttonJuridico"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="199dp"
             android:enabled="false"
             android:text="Informações Empresa"
             android:visibility="invisible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView61" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView61"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <Button
             android:id="@+id/buttonPropriedade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Informações Propriedade"
+            android:text="Informações da Propriedade"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
@@ -95,7 +96,7 @@
             android:id="@+id/buttonRelatorio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Relatório"
+            android:text="Descrição da Visita / Relatório"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonPropriedade"
@@ -117,7 +118,7 @@
             android:id="@+id/buttonLatLng"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Registrar Coordenadas"
+            android:text="Coletar Coordenadas"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonFotos"
