--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1251,7 +1251,9 @@
             android:minLines="1"
             android:layout_height="wrap_content"
             android:textAlignment="textStart"
-            android:gravity="start"/>
+            android:gravity="start"
+            android:layout_marginTop="0dp"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/registerAddButton"
@@ -1261,7 +1263,7 @@
             app:fabSize="mini"
             app:srcCompat="@android:drawable/ic_input_add"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="6dp"
             android:layout_marginRight="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             />
