--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,13 +39,12 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="Login:  "
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView"
-                android:layout_weight="1"
-                android:textStyle="normal|bold"
-                android:textSize="24sp" />
+                android:text="Usuário:  "
+                android:textSize="23sp"
+                android:textStyle="normal|bold" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -54,7 +53,7 @@
                 android:ems="10"
                 android:id="@+id/loginText"
                 android:layout_weight="1"
-                android:hint="Login" />
+                android:hint="Usuário" />
         </LinearLayout>
 
         <LinearLayout
@@ -64,26 +63,24 @@
 
             <TextView
                 android:text="Senha: "
-                android:layout_width="wrap_content"
+                android:layout_width="94dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
-                android:layout_weight="1"
                 android:textStyle="normal|bold"
                 android:textSize="24sp" />
 
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
                 android:id="@+id/passwdText"
-                android:layout_weight="1"
-                android:hint="Senha" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Senha"
+                android:inputType="textPassword" />
 
         </LinearLayout>
 
         <Button
-            android:text="Login"
+            android:text="Entrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/loginButton" />
