--- a/app/src/main/res/layout/activity_register_juridico.xml
+++ b/app/src/main/res/layout/activity_register_juridico.xml
@@ -1339,7 +1339,8 @@
             android:minLines="1"
             android:layout_height="wrap_content"
             android:textAlignment="textStart"
-            android:gravity="start"/>
+            android:gravity="start"
+            app:layout_constraintBottom_toTopOf="@+id/juridicoAddButton"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/juridicoAddButton"
