--- a/app/src/main/res/layout/activity_info_prop.xml
+++ b/app/src/main/res/layout/activity_info_prop.xml
@@ -637,7 +637,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:focusable="false"
             android:hint="Construções"
             android:inputType="textPersonName"
             android:minLines="1"
@@ -670,7 +669,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:focusable="false"
             android:hint="Equipamentos"
             android:inputType="textPersonName"
             android:minLines="1"
@@ -703,7 +701,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:focusable="false"
             android:hint="Quantidade"
             android:inputType="textPersonName"
             android:minLines="1"
@@ -876,7 +873,9 @@
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView104" />
+            app:layout_constraintTop_toBottomOf="@id/textView104"
+            app:layout_constraintBottom_toTopOf="@+id/infoPropAddButton"
+            />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/infoPropAddButton"
