--- a/app/src/main/res/layout/activity_relatorio.xml
+++ b/app/src/main/res/layout/activity_relatorio.xml
@@ -74,22 +74,21 @@
             />
 
         <EditText
-            android:layout_width="0dp"
-            android:inputType="date"
             android:id="@+id/dataRelatorioText"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@id/textView106"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@id/textView106"
-            android:hint="01/01/1900"
-            android:textAlignment="center"
-            android:minLines="1"
+            android:layout_width="0dp"
             android:layout_height="38dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:hint="01/01/1900"
+            android:inputType="datetime"
+            android:minLines="1"
+            android:textAlignment="center"
             android:textSize="16sp"
-            />
+            app:layout_constraintLeft_toRightOf="@id/textView106"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView106" />
 
 
 
@@ -267,22 +266,21 @@
             />
 
         <EditText
-            android:layout_width="0dp"
-            android:inputType="date"
             android:id="@+id/data2RelatorioText"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@id/textView106"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@id/textView111"
-            android:hint="01/01/1900"
-            android:textAlignment="center"
-            android:minLines="1"
+            android:layout_width="0dp"
             android:layout_height="38dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:hint="01/01/1900"
+            android:inputType="datetime"
+            android:minLines="1"
+            android:textAlignment="center"
             android:textSize="16sp"
-            />
+            app:layout_constraintLeft_toRightOf="@id/textView106"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView111" />
 
 
 
@@ -398,22 +396,21 @@
             />
 
         <EditText
-            android:layout_width="0dp"
-            android:inputType="date"
             android:id="@+id/data3RelatorioText"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@id/textView114"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@id/textView114"
-            android:hint="01/01/1900"
-            android:textAlignment="center"
-            android:minLines="1"
+            android:layout_width="0dp"
             android:layout_height="38dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:hint="01/01/1900"
+            android:inputType="datetime"
+            android:minLines="1"
+            android:textAlignment="center"
             android:textSize="16sp"
-            />
+            app:layout_constraintLeft_toRightOf="@id/textView114"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView114" />
 
 
 
@@ -467,7 +464,8 @@
             android:textAlignment="textStart"
             android:gravity="start"
             android:hint="Descrição Visita"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/relatorioAddButton"/>
 
         <ImageView
             android:layout_height="wrap_content"
