--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -189,6 +189,7 @@
             android:layout_marginLeft="38dp"
             android:layout_marginRight="2dp"
             android:clickable="true"
+            app:backgroundTint="@color/colorPrimary"
             app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.363"
